...
                }
            }
            .listStyle(.insetGrouped)
            .navigationTitle(group == nil ? "Choose Stops" : "Edit Stops")
            .navigationBarTitleDisplayMode(.inline)
            .searchable(text: $viewModel.search.query, isPresented: $viewModel.searchPresented,
                        placement: .navigationBarDrawer(displayMode: .always), prompt: "Search address or stop number")
            .onSubmit(of: .search) {
                if search.stopNumber != nil { search.findStops(debounce: false) }
                else { findAddress() }
            }
            .onChange(of: searchPresented) { _, active in if active { detent = .large } }
            .toolbar {
...
